:hammer: feat!!!: DTO, Spring Security, Entities, Mappers, Controllers